syntax = "proto3";
package sila2;

service TaskService {
  rpc StartTask(StartTaskRequest) returns (TaskResponse);
  rpc GetTaskStatus(TaskStatusRequest) returns (TaskStatusResponse);
}

message StartTaskRequest {
  string device_id = 1;
  string command = 2;
  map<string, string> parameters = 3;
}

message TaskResponse {
  string task_id = 1;
  string status = 2;
}

message TaskStatusRequest {
  string task_id = 1;
}

message TaskStatusResponse {
  string task_id = 1;
  int32 progress = 2;
  string status = 3;
  string message = 4;
}
